scratch/middleware-chain-authelia.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-authelia
spec:        
  chain:
    middlewares:
      - name: middlewares-rate-limit
      - name: middlewares-secure-headers
      - name: middlewares-authelia
