scratch/middleware-chains.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-no-auth
spec:
      chain:
        middlewares:
          - name: middlewares-rate-limit
          - name: middlewares-secure-headers

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-basic-auth
spec:
      chain:
        middlewares:
          - name: middlewares-rate-limit
          - name: middlewares-secure-headers
          - name: middlewares-basic-auth

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-authelia
spec:        
      chain:
        middlewares:
          - name: middlewares-rate-limit
          - name: middlewares-secure-headers
          - name: middlewares-authelia
