scratch/middlewares-rate-limit.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middlewares-rate-limit
spec:
  rateLimit:
    average: 100
    burst: 50
